# hisg

./: .gitignore  Analyzer.hs  Chart.hs  Event.hs  Formatter.hs  LICENSE  Log.hs  LogParser.hs  Main.hs  Makefile  Misc.hs  README  Stats.hs  Types.hs  User.hs  hisg.cabal  index.html  style.css
Hisg/: Misc.hs  Types.hs
src/: Hisg.hs  Makefile  Wtf.hs  hisg.aux  hisg.hp  hisg.prof  hisg.ps  naapurinpoika  prof.bat  style.css
src/Hisg/: Chart.hs  Core.hs  Event.hs  Formatter.hs  IRCLog.hs  LineChunks.hs  Log.hs  MapReduce.hs  Misc.hs  Parser.hs  Stats.hs  Types.hs  User.hs  prof.bat
src/Hisg/Analysis/: Analysis.hs  Event.hs  Match.hs  Statistic.hs
src/Hisg/Formats/: Base.hs  Irssi.hs
