Name:                   hisg
Version:                0.1.0
Description:            IRC statistics generator
License:                BSD3
License-file:           LICENSE
Author:                 Antoine Kalmbach
Maintainer:             antoine.kalmbach@jyu.fi
Build-Type:             Simple
Cabal-Version:          >=1.2
extra-source-files:     README

Executable hisg
  Build-Depends:    parsec, split, base >= 4, haskell98
  Main-Is:          Hisg.hs
  Hs-Source-Dirs:   src

