Name:                   hisg
Version:                0.1.0
Description:            IRC statistics generator
License:                BSD3
License-file:           LICENSE
Author:                 Antoine Kalmbach
Maintainer:             antoine.kalmbach@jyu.fi
Build-Type:             Simple
extra-source-files:     README

Executable hisg
  Build-Depends:    array, split, base >= 4, mtl, syb, bytestring, parallel, pcre-light, containers, deepseq, time
  Main-Is:          hisg.hs
  Hs-Source-Dirs:   src

